metadata/force-app/main/default/objects/Activity/fields/SalesLoft1__Call_Duration_in_Minutes__c.field-meta.xml
<CustomField>
    <fullName>SalesLoft1__Call_Duration_in_Minutes__c</fullName>
    <formula>CallDurationInSeconds  / 60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Call Duration in Minutes</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>