metadata/force-app/main/default/objects/Activity/fields/SalesLoft1__Call_Sentiment__c.field-meta.xml
<CustomField>
    <fullName>SalesLoft1__Call_Sentiment__c</fullName>
    <description>The SalesLoft sentiment value that the user logged during the call.</description>
    <label>Call Sentiment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>