metadata/force-app/main/default/objects/Activity/fields/SalesLoft1__SalesLoft_Clicked_Count__c.field-meta.xml
<CustomField>
    <fullName>SalesLoft1__SalesLoft_Clicked_Count__c</fullName>
    <description>How many clicks were received on a URL within a SalesLoft email.</description>
    <label>SalesLoft Clicked Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>