metadata/force-app/main/default/objects/Activity/fields/SalesLoft1__SalesLoft_Connected_Count__c.field-meta.xml
<CustomField>
    <fullName>SalesLoft1__SalesLoft_Connected_Count__c</fullName>
    <formula>IF( 
CONTAINS( SalesLoft1__Call_Disposition__c , &quot;Connected&quot; ), 1, 
NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SalesLoft Connected Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>