metadata/force-app/main/default/objects/Activity/fields/SalesLoft1__SalesLoft_Email_Template_Title__c.field-meta.xml
<CustomField>
    <fullName>SalesLoft1__SalesLoft_Email_Template_Title__c</fullName>
    <description>The name given to a SalesLoft email template.</description>
    <label>SalesLoft Email Template Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>