metadata/force-app/main/default/objects/Activity/fields/SalesLoft1__SalesLoft_Replies_Count__c.field-meta.xml
<CustomField>
    <fullName>SalesLoft1__SalesLoft_Replies_Count__c</fullName>
    <description>How many replies a SalesLoft email has received.</description>
    <label>SalesLoft Replies Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>