metadata/force-app/main/default/objects/Activity/fields/SalesLoft1__SalesLoft_Step_Day__c.field-meta.xml
<CustomField>
    <fullName>SalesLoft1__SalesLoft_Step_Day__c</fullName>
    <description>The day in the SalesLoft Cadence that a step has been set to be run.</description>
    <label>SalesLoft Step Day</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>