metadata/force-app/main/default/objects/Activity/fields/SalesLoft1__SalesLoft_Unique_Click_Count__c.field-meta.xml
<CustomField>
    <fullName>SalesLoft1__SalesLoft_Unique_Click_Count__c</fullName>
    <formula>IF(
SalesLoft1__SalesLoft_Clicked_Count__c&gt;0,1,NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SalesLoft Unique Click Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>