metadata/force-app/main/default/objects/Activity/fields/Self_Created_Activity__c.field-meta.xml
<CustomField>
    <fullName>Self_Created_Activity__c</fullName>
    <formula>IF( ISBLANK( BDR__r.Username ) , 
 IF( CreatedBy.Username = Owner:User.Username , TRUE, FALSE),
 IF( BDR__r.Username = Owner:User.Username , TRUE , FALSE))</formula>
    <label>Self-Created Activity</label>
    <type>Checkbox</type>
</CustomField>