metadata/force-app/main/default/objects/Activity/fields/slt_SalesLoft1_Engagement_Step_Day__c.field-meta.xml
<CustomField>
    <fullName>slt_SalesLoft1_Engagement_Step_Day__c</fullName>
    <description>BODEV-2926 New custom field created to map data from Salesloft</description>
    <label>SalesLoft Engagement Step Day</label>
    <length>255</length>
    <type>Text</type>
</CustomField>