metadata/force-app/main/default/objects/Activity/fields/Solutions_Present__c.field-meta.xml
<CustomField>
    <fullName>Solutions_Present__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field to start collecting information on whether a solutions consultant&apos;s presence on an activity affects results</description>
    <inlineHelpText>Was a solutions consultant present on the activity?</inlineHelpText>
    <label>Solutions Present?</label>
    <type>Checkbox</type>
</CustomField>