metadata/force-app/main/default/objects/Activity/fields/Time_since_activity__c.field-meta.xml
<CustomField>
    <fullName>Time_since_activity__c</fullName>
    <formula>(Now() -  Timestamp_Activity_Completed__c) * 24</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time since activity (h)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>