metadata/force-app/main/default/objects/Activity/fields/Timestamp_Activity_Completed__c.field-meta.xml
<CustomField>
    <fullName>Timestamp_Activity_Completed__c</fullName>
    <label>Timestamp Activity Completed</label>
    <type>DateTime</type>
</CustomField>