metadata/force-app/main/default/objects/Activity/listViews/Floris_Talk_List.listView-meta.xml
<ListView>
    <fullName>Floris_Talk_List</fullName>
    <booleanFilter>1 AND 2 AND 3</booleanFilter>
    <columns>TASK.SUBJECT</columns>
    <columns>TASK.WHO_NAME</columns>
    <columns>TASK.WHAT_NAME</columns>
    <columns>TASK.DUE_DATE</columns>
    <columns>TASK.STATUS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>TASK.STATUS</field>
        <operation>notEqual</operation>
        <value>Completed</value>
    </filters>
    <filters>
        <field>TASK.STATUS</field>
        <operation>equals</operation>
        <value>Not Started,In Progress,Waiting on someone else,Deferred</value>
    </filters>
    <filters>
        <field>BDR_old__c</field>
        <operation>equals</operation>
        <value>Floris van Nieuwland</value>
    </filters>
    <label>Floris - Talk List</label>
</ListView>