metadata/force-app/main/default/objects/Activity/listViews/MyActivities.listView-meta.xml
<ListView>
    <fullName>MyActivities</fullName>
    <booleanFilter>1 AND 2 AND 3</booleanFilter>
    <filterScope>Mine</filterScope>
    <filters>
        <field>TASK.STATUS</field>
        <operation>notEqual</operation>
        <value>Completed</value>
    </filters>
    <filters>
        <field>ACTIVITY.TASK</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>TASK.SUBJECT</field>
        <operation>notContain</operation>
        <value>Unresolved Email</value>
    </filters>
    <label>My Activities</label>
</ListView>